changed font size to vw and added some bulma classes to make the battle page more responsive on small screens, adjusted some text alignments in index.html and changed the link hover color to make it more noticeable. fixed an issue with the background not displaying properly on small screens on the battlepage. added an area to display the round conclusion every round. added random monster portraits that change with every monster

--- a/style/style.css
+++ b/style/style.css
@@ -29,13 +29,12 @@
   }
 
   #monPortrait {
-      height: 20vh;
+      height: 15vw;
       width: 15vw;
-      float: right;
   }
 
   #playPortrait {
-    height: 20vh;
+    height: 15vw;
     width: 15vw;
   }
 
@@ -44,10 +43,14 @@
       color: black;
   }
 
+.heroName {
+    text-align: center;
+}
 
 
 .healthValues {
     color: black;
+    text-align: center;
 }
 
 .portraitPlay {
@@ -82,8 +85,10 @@
     /* For mobile phones: */
    .background {
       width: auto;
-      height: auto;
+      height: 100%;
     } 
+
+
 }
 
 #monName {
@@ -111,4 +116,11 @@
     color: goldenrod;
 }
 
+.batPageText {
+    font-size: 1.5vw;
+}
 
+.Score {
+    padding: 0;
+    margin: 0;
+}
